--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,13 +7,13 @@
 		<h1>Spring To KaKao</h1>
 		<p>회원 기능</p>
 		<p>
- 			<a href="https://kauth.kakao.com/oauth/authorize?client_id=53c5f9b54ad9450a6cc811fdccf65417&redirect_uri=http://localhost:8080/login&response_type=code">카카오 회원 가입(로그인)</a>
+ 			<a href="https://kauth.kakao.com/oauth/authorize?client_id={your_client_id}&redirect_uri={your_redirect_uri}&response_type=code">카카오 회원 가입(로그인)</a>
 			<a href="/members/new">일반 회원 가입</a>
 			<a href="/members/kakao">카카오 회원 목록</a>
 			<a href="/members/public">일반 회원 목록</a>
 		</p>
 		<p>
- 			<a href="https://kauth.kakao.com/oauth/logout?client_id=53c5f9b54ad9450a6cc811fdccf65417&logout_redirect_uri=http://localhost:8080/logout&response_type=code">카카오 로그아웃</a>
+ 			<a href="https://kauth.kakao.com/oauth/logout?client_id={your_client_id}&logout_redirect_uri={your_redirect_uri}&response_type=code">카카오 로그아웃</a>
 		</p>
 	</div>
 </div> <!-- /container -->
